--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "open": "cross-env NODE_OPTIONS=--loader=ts-node/esm cypress open --e2e",
+    "test": "cross-env NODE_OPTIONS=--loader=ts-node/esm cypress run --env tags='not @ignore' --e2e"
   },
   "dependencies": {
     "@cloudinary/url-gen": "^1.11.1",
@@ -44,16 +46,27 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^19.1.0",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
     "@types/react": "^18.2.19",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.17",
+    "cross-env": "^7.0.3",
+    "cypress": "^13.5.0",
+    "cypress-multi-reporters": "^2.0.5",
+    "esbuild": "^0.19.12",
     "eslint": "^8.46.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "vite": "^4.4.5"
+  },
+  "overrides": {
+    "esbuild": "^0.19.12"
   }
 }
