--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,6 +4,9 @@ version = "1.5.0"
 description = ""
 authors = ["Prathameshdhande22 <prathameshdhande534@gmail.com>"]
 readme = "README.md"
+packages = [
+    { include = "api" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
