Feat: E2E test user login

--- a/frontend/cypress/tsconfig.json
+++ b/frontend/cypress/tsconfig.json
@@ -9,5 +9,10 @@
     "types": ["cypress"],
     "lib": ["ES2020", "DOM"]
   },
-  "include": ["cypress.config.ts", "cypress", "reporter-config.js"]
+  "include": [
+    "cypress.config.ts",
+    "cypress",
+    "reporter-config.js",
+    "cypress/**/*.ts"
+  ]
 }
