--- a/frontend/cypress/package.json
+++ b/frontend/cypress/package.json
@@ -14,11 +14,17 @@
     "@badeball/cypress-cucumber-preprocessor": "^19.1.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
     "@types/cypress-cucumber-preprocessor": "^4.0.5",
+    "@types/mongodb": "^4.0.7",
     "cypress": "^13.5.0",
     "cypress-multi-reporters": "^1.6.4",
     "esbuild": "^0.19.5",
     "mochawesome": "^7.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
+    "mongodb": "^6.16.0"
   }
 }
