--- a/frontend/cypress/package.json
+++ b/frontend/cypress/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^19.1.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "@faker-js/faker": "^9.8.0",
     "@types/cypress-cucumber-preprocessor": "^4.0.5",
     "@types/mongodb": "^4.0.7",
     "cypress": "^13.5.0",
